--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 * {
   box-sizing: border-box;
   margin: 0px;
@@ -60,6 +61,9 @@ header .download-logo:hover {
   background-color: #d4bfec42;
   color: black;
 }
+header .dropdown {
+  display: none;
+}
 .section1 {
   position: relative;
 }
@@ -73,6 +77,7 @@ header .download-logo:hover {
   padding-bottom: 140px;
   clip-path: ellipse(90% 80% at 27% 18%);
   overflow-x: hidden;
+  width: 100%;
 }
 .hero-section .container {
   padding-top: 120px;
@@ -181,7 +186,7 @@ header .download-logo:hover {
   display: flex;
   flex-direction: row;
   gap: 10px;
-  align-items: center;
+  align-items: center; 
 }
 .about .download-logo {
   display: flex;
@@ -229,7 +234,7 @@ header .download-logo:hover {
 }
 .residence {
   display: flex;
-  gap: 60px;
+  gap: 80px;
 }
 .address {
   display: flex;
@@ -266,7 +271,6 @@ header .download-logo:hover {
   display: grid;
   grid-template-columns: auto auto;
   gap: 40px;
-  /*margin-right: 50px;*/
   position: relative;
   right: 40px;
 }
@@ -275,4 +279,138 @@ header .download-logo:hover {
   border-radius: 29px;
   padding: 10px 20px;
   text-align: center;
+}
+@media screen and (max-width: 1200px) {
+  header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  nav {
+      display: none;
+  }
+  header .download-logo {
+      display: none;
+  }
+  header .dropdown {
+      position: relative;
+      display: inline-block;
+      padding-right: 40px;
+  }
+  .dropdown:hover .content {
+      display: block;
+  }
+  .dropdown button {
+      background-color: #5f7d78;
+      border: none;
+      cursor: pointer;
+      padding: 5px 10px;
+  }
+  .dropdown .content {
+      display: none;
+      position: absolute;
+      background-color: #5f7d78;
+      min-width: 100px;
+      box-shadow: 6px 6px 12px hsl(0, 0%, 0%);
+  }
+  .dropdown a {
+      text-decoration: none;
+      display: block;
+      color: white;
+      padding: 10px 15px;
+      font-size: 1.5rem;
+  }
+  .dropdown a:hover {
+      background-color: #343a394d;
+      color: #d1d8d7;
+  }
+}
+@media screen and (max-width: 600px){
+.guy-image {
+  display: none;
+}
+.section1 .box {
+  display: none;
+}
+.hero-section {
+  clip-path: ellipse(90% 80% at 40% 40%);
+}
+.about {
+  padding-left: 0px;
+  padding-right: 0px;
+  margin-bottom: 0px;
+}
+.about .container1 {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.about .container1 .wrapper1 {
+  margin-bottom: 30px;
+}
+.about .container2 .wrapper2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 5px;
+  padding-left: 5px;
+}
+.about.icons {
+  display: flex;
+  flex-direction: row;
+  gap: 0px;
+}
+.p-div {
+  display: flex;
+  justify-content: center;
+}
+.about .container2 p {
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 60px;
+  font-size: 5.1rem;
+  font-weight: 400;
+  font-family: "Whisper", cursive;
+}
+.grid-container, .grid{
+  display: none;
+}
+.footer {
+  display: block;
+  padding-left: 3px;
+  padding-right: 3px;
+}
+.age {
+  display: flex;
+  gap: 80px;
+}
+.residence {
+  display: flex;
+  gap: 20px;
+}
+.address {
+  display: flex;
+  gap: 5px;
+}
+.email {
+  display: flex;
+  gap: 70px;
+}
+.phone {
+  display: flex;
+  gap: 60px;
+}
+.freelance {
+  display: flex;
+  gap: 20px;
+}
+.info {
+  padding: 12px 10px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.form {
+  border: 3px solid black;
+  border-radius: 27px;
+}
 }
